--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -14,6 +14,7 @@
   text-align: center;
   color: #ffffff;
 }
+
 .home input {
   margin-top: 17px;
   margin-bottom: 20px;
@@ -96,10 +97,71 @@
   line-height: 20.02px;
   color: #0ecb81;
 }
+
 .cap {
   font-family: 'Roboto';
   font-weight: 400;
   font-size: 14px;
   line-height: 20.02px;
   color: #ffffff;
+}
+
+.bitcoin {
+  width: 1232px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #16171a;
+  border-radius: 4px;
+  padding-top: 16px;
+  padding-bottom: 17px;
+}
+
+.bitcoin-main {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+}
+
+.bitcoin-main img {
+  width: 40px;
+  height: 40px;
+}
+
+.main {
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+}
+
+.main-symbol {
+  font-size: 16px;
+  font-weight: bold;
+  color: #ffffff;
+  text-transform: uppercase;
+}
+
+.main-name {
+  font-size: 12px;
+  color: #a9a9a9;
+}
+
+.bitcoin-price {
+  font-size: 14px;
+  color: #ffffff;
+  flex: 1;
+  text-align: center;
+}
+
+.change {
+  display: flex;
+  align-items: center;
+  font-size: 14px;
+  flex: 1;
+}
+
+.cap {
+  font-size: 14px;
+  color: #ffffff;
+  text-align: center;
 }
