--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -115,6 +115,7 @@
   border-radius: 4px;
   padding-top: 16px;
   padding-bottom: 17px;
+  border-bottom: 1px solid #515151;
 }
 
 .bitcoin-main {
@@ -165,3 +166,11 @@
   color: #ffffff;
   text-align: center;
 }
+
+/* .pagion {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 20px;
+  padding-bottom: 20px;
+} */
