--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -167,10 +167,12 @@
   text-align: center;
 }
 
-/* .pagion {
+.pagion {
   display: flex;
   align-items: center;
   justify-content: center;
   margin-top: 20px;
   padding-bottom: 20px;
-} */
+  gap: 50px;
+  font-size: 22px;
+}
